DSL実装サンプル。

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "build": "tsc --build && vite build",
+    "build.d": "tsc --declaration --outDir node_modules/.tmp src/dsl.ts && mv node_modules/.tmp/dsl.d.ts dsl/",
     "clean": "rimraf dist",
     "cleanlib": "rimraf node_modules",
     "test": "jest"
